@@ -7,8 +7,12 @@ collectd (4.4.1-2) UNRELEASED; urgency=low
     #479899.
   * Added build dependency on pkg-config - this is used by collectd's
     configure script to check for a couple of libraries.
+  * Added libupsclient-config.sh to imitate libupsclient-config which is no
+    longer available. libupsclient-config.sh is a simple wrapper around
+    pkg-config. This is a workaround until upstream supports pkg-config for
+    libupsclient.
 
- -- Sebastian Harl <sh@tokkee.org>  Mon, 07 Jul 2008 19:31:19 +0000
+ -- Sebastian Harl <sh@tokkee.org>  Mon, 07 Jul 2008 20:24:57 +0000
 
 collectd (4.4.1-1) unstable; urgency=low
 
